	PR c++/11987 	* parser.c (cp_parser_direct_declarator): Give helpful error about 	trying to define member of a dependent typedef. 	* pt.c (resolve_typename_type): Don't resolve a typedef typename. 	* tree.c (typedef_variant_p): New. 	* cp-tree.h: Declare it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154149 138bc75d-0d04-0410-961f-82ee72b054a4